--- a/index.html
+++ b/index.html
@@ -3,6 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="The JCS Robotics 9204A/B Club Website">
+    <meta property="og:title" content="The John Cooper School Robotics Club">
+    <meta property="og:description" content="The JCS Robotics 9204A/B Club Website">
+    <meta property="og:image" content="https://jcsrobotics.org/media/banner.png">
+    <meta property="og:url" content="https://jcsrobotics.org">
+    <meta property="og:type" content="website">
+
+    <link rel="shortcut icon" type="image/png" href="https://jcsrobotics.org/media/logo.png">
     <title>The John Cooper School Robotics Club | 9204A / 9204B Dragons</title>
     <style>
         body 
@@ -64,7 +72,7 @@
 <body>
     <div class="content">
         <div class="header">
-            <img src="media/logo.png" alt="Logo">
+            <img src="https://jcsrobotics.org/media/logo.png" alt="Logo">
             <div class="title">
                 <h1>The John Cooper School Robotics Club</h1>
                 <h2><span class="green-text">9204A | 9204B Dragons</span></h2>
