--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="The JCS Robotics 9204A/B Club Website">
+    <meta name="theme-color" content="#2b694e">
     <meta property="og:title" content="The John Cooper School Robotics Club">
     <meta property="og:description" content="The JCS Robotics 9204A/B Club Website">
     <meta property="og:image" content="https://jcsrobotics.org/media/banner.png">
