Added another video

--- a/index.html
+++ b/index.html
@@ -12,63 +12,8 @@
     <meta property="og:type" content="website">
 
     <link rel="shortcut icon" type="image/png" href="https://jcsrobotics.org/media/logo.png">
+    <link rel="stylesheet" href="styles.css">
     <title>The John Cooper School Robotics Club | 9204A / 9204B Dragons</title>
-    <style>
-        body 
-        {
-            background-color: #0d1117;
-            color: #c9d1d9;
-            font-family: Arial, sans-serif;
-            line-height: 1.6;
-            margin: 0;
-            padding: 20px;
-        }
-        h1, h2, h3 
-        {
-            color: #58a6ff;
-        }
-        a 
-        {
-            color: #58a6ff;
-            text-decoration: none;
-        }
-        a:hover 
-        {
-            text-decoration: underline;
-        }
-        .green-text 
-        {
-            color: #083c14;
-        }
-        iframe 
-        {
-            display: block;
-            margin: 20px 0;
-        }
-        .content 
-        {
-            max-width: 800px;
-            margin: 0 auto;
-        }
-        .header 
-        {
-            display: flex;
-            align-items: center;
-            gap: 10px;
-        }
-        .header img 
-        {
-            width: 64px;
-            height: 64px;
-            margin-bottom: 75px;
-        }
-        .title 
-        {
-            display: flex;
-            flex-direction: column;
-            text-align: center;
-        }
-    </style>
 </head>
 <body>
     <div class="content">
@@ -86,9 +31,10 @@
         <h3>Getting involved</h3>
         <p>Any high school student in the John Cooper School is eligible to join. No prior experience is needed, only an enthusiasm to learn requisite skills. New members are recommended to join <strong class="green-text">9204B</strong>, where experienced team leaders will help impart useful knowledge. Experienced members are encouraged to participate in <strong class="green-text">9204A</strong>.</p>
         <h3>Work Showcase</h3>
-        <p>WIP</p>
-        <p>(put club videos or stuff here?)</p>
-        <iframe width="480" height="270" src="https://www.youtube.com/embed/faWVlxzpYxg?si=L0uXy27jKb29zwT9&amp;controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <div class="video-container">
+            <iframe width="480" height="270" src="https://www.youtube.com/embed/faWVlxzpYxg?si=L0uXy27jKb29zwT9&amp;controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <iframe width="480" height="270" src="https://www.youtube.com/embed/MhChnjg8OAg?si=YYttYQr6gxlpBI0X&amp;controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        </div>
         <h3>Codebases</h3>
         <p>This year's code for the High Stakes competition can be found here: <a href="https://github.com/9204A-B/HighStakes" target="_blank">github.com/9204A-B/HighStakes</a></p>
         <p>The codebase from last year's Over Under competition can be found here: <a href="https://github.com/9204A-B/OverUnder" target="_blank">github.com/9204A-B/OverUnder</a></p>
